[package]
name = "faucet"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { path = "../types", default-features = false }
sdk.workspace = true
soma-keys.workspace = true
axum.workspace = true
tower-http.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
uuid.workspace = true
reqwest.workspace = true

[dev-dependencies]
test-cluster.workspace = true
futures.workspace = true

[lints]
workspace = true

[[bin]]
name = "soma-faucet"
path = "src/main.rs"
