[package]
name = "faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
# Always needed (for gRPC client stubs, codec, and types)
tonic = { version = "0.14.3", default-features = false, features = ["transport"] }
serde.workspace = true
serde_json.workspace = true
bcs.workspace = true
bytes.workspace = true

# Server-only dependencies
types = { path = "../types", default-features = false, optional = true }
utils = { path = "../utils", optional = true }
sdk = { workspace = true, optional = true }
soma-keys = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
test-cluster.workspace = true
futures.workspace = true

[features]
default = ["server"]
server = [
    "dep:types", "dep:utils", "dep:sdk", "dep:soma-keys",
    "dep:clap", "dep:tokio", "dep:tracing", "dep:tracing-subscriber",
    "dep:thiserror", "dep:uuid", "dep:reqwest",
]

[lints]
workspace = true

[[bin]]
name = "soma-faucet"
path = "src/main.rs"
required-features = ["server"]
