[package]
name = "indexer-e2e-tests"
version.workspace = true
edition = "2024"

[dependencies]
# On-chain
test-cluster.workspace = true
types.workspace = true
rpc.workspace = true

# Indexer stack
indexer-alt.workspace = true
indexer-framework = { workspace = true, features = ["postgres"] }
indexer-pg-db.workspace = true
indexer-alt-schema.workspace = true
soma-graphql.workspace = true

# Infrastructure
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
prometheus.workspace = true
tempfile.workspace = true
diesel = { workspace = true }
diesel-async = { workspace = true }
url.workspace = true
reqwest.workspace = true
axum.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[lints]
workspace = true
