[package]
name = "indexer-kvstore"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
bytes.workspace = true
async-trait.workspace = true
base64.workspace = true
bcs.workspace = true
clap.workspace = true
futures.workspace = true
governor = "0.8"
http.workspace = true
gcp_auth = "0.12"
prometheus.workspace = true
prost.workspace = true
prost-types.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde.workspace = true
toml = "0.8"
indexer-framework = { workspace = true }
indexer-store-traits.workspace = true
types.workspace = true
protocol-config.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["transport"] }
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-stream.workspace = true
