[package]
name = "models"
edition = "2021"
version.workspace = true

[dependencies]
num-traits.workspace = true
ndarray.workspace = true
burn.workspace = true
safetensors.workspace = true
types.workspace = true
arrgen.workspace = true
blobs.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
safetensors.workspace = true

[lints]
workspace = true
