[package]
name = "node"
edition = "2024"
version.workspace = true

[dependencies]
sync.workspace = true
authority.workspace = true
runtime.workspace = true
tokio.workspace = true
anyhow.workspace = true
types.workspace = true
tracing.workspace = true
arc-swap.workspace = true
futures.workspace = true
parking_lot.workspace = true
msim.workspace = true
soma-http.workspace = true
axum.workspace = true
rpc.workspace = true
tower.workspace = true
http.workspace = true
tower-http.workspace = true
store.workspace = true
soma-tls.workspace = true
protocol-config.workspace = true
object_store.workspace = true

[lints]
workspace = true
