[package]
name = "probes"
edition = "2024"
version.workspace = true

[dependencies]
num-traits.workspace = true

[dependencies.burn]
workspace = true
features = ["ndarray", "autodiff"]

[dev-dependencies]
arrgen.workspace = true
safetensors.workspace = true
ndarray.workspace = true
ndarray-safetensors.workspace = true
burn-store.workspace = true
burn-ndarray.workspace = true

[lints]
workspace = true
