[package]
name = "protocol-config"
edition = "2024"
version.workspace = true

[dependencies]
serde.workspace = true
tracing.workspace = true
serde_with = { version = "3.16", default-features = false, features = ["alloc"] }
protocol-config-macros.workspace = true
schemars = { version = "0.8.22", features = ["either"] }
clap.workspace = true
serde-env = "0.2.0"
fastcrypto = { workspace = true }
