[project]
name = "soma-examples"
version = "0.1.0"
description = "Runnable examples demonstrating the SOMA Python SDK"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "SOMA Contributors" }]
dependencies = ["soma-sdk", "boto3", "moto[server]", "soma-arrgen", "safetensors"]

[project.urls]
Homepage = "https://github.com/soma-org/soma"
Repository = "https://github.com/soma-org/soma"

[project.scripts]
soma-example-client = "soma_examples.client:main"
soma-example-faucet = "soma_examples.faucet:main"
soma-example-scoring = "soma_examples.scoring:main"
soma-example-quickstart = "soma_examples.quickstart:main"
soma-example-transfers = "soma_examples.transfers:main"
soma-example-staking = "soma_examples.staking:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
