[project]
name = "soma-models"
version = "0.1.5"
description = "Python model implementations for the SOMA network, matching the Rust runtime exactly"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "SOMA Contributors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["safetensors>=0.6.2"]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
flax = ["flax>=0.11.0"]
all = ["soma-models[torch,flax]"]

[project.urls]
Homepage = "https://github.com/soma-org/soma"
Repository = "https://github.com/soma-org/soma"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.3.5", "soma-models[all]", "soma-arrgen"]

[tool.uv.sources]
soma-arrgen = { workspace = true }
